tests/compile_fail/declare_scheduler_element_non_string.rs
use ktstr::declare_scheduler;

declare_scheduler!(MY_SCHED, {
    name = "my_sched",
    binary = "scx_my_sched",
    sched_args = [42],
});

fn main() {}
